# COCO-dataset

./: dataset.ipynb  model_train.ipynb  pyproject.toml  readme.md
